--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hello , World from Us</h1>
+    <p>Fish</p>
+    <img src="/images/breaching_whale.jpg" alt="Whale Fish">
 </body>
 </html>
