Add a link to the About page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Hello , World from Us</h1>
+    <a href="about.html">About this project</a>
     <p>Fish</p>
+    
     <img src="/images/breaching_whale.jpg" alt="Whale Fish">
 </body>
 </html>
